; ModuleID = '/home/carl/AnghaBench/radare2/libr/hash/extr_md5.c_MD5_Final.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/hash/extr_md5.c_MD5_Final.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*, i32* }

@PADDING = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MD5_Final(i32* %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca [8 x i32], align 16
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %4, align 8
  %8 = getelementptr inbounds [8 x i32], [8 x i32]* %5, i64 0, i64 0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = call i32 @Encode(i32* %8, i32* %11, i32 8)
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load i32, i32* %16, align 4
  %18 = ashr i32 %17, 3
  %19 = and i32 %18, 63
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = icmp slt i32 %20, 56
  br i1 %21, label %22, label %25

22:                                               ; preds = %2
  %23 = load i32, i32* %6, align 4
  %24 = sub nsw i32 56, %23
  br label %28

25:                                               ; preds = %2
  %26 = load i32, i32* %6, align 4
  %27 = sub nsw i32 120, %26
  br label %28

28:                                               ; preds = %25, %22
  %29 = phi i32 [ %24, %22 ], [ %27, %25 ]
  store i32 %29, i32* %7, align 4
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %31 = load i32*, i32** @PADDING, align 8
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @MD5_Update(%struct.TYPE_4__* %30, i32* %31, i32 %32)
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %35 = getelementptr inbounds [8 x i32], [8 x i32]* %5, i64 0, i64 0
  %36 = call i32 @MD5_Update(%struct.TYPE_4__* %34, i32* %35, i32 8)
  %37 = load i32*, i32** %3, align 8
  %38 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 1
  %40 = load i32*, i32** %39, align 8
  %41 = call i32 @Encode(i32* %37, i32* %40, i32 16)
  %42 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %43 = bitcast %struct.TYPE_4__* %42 to i8*
  %44 = call i32 @r_mem_memzero(i8* %43, i32 16)
  ret void
}

declare dso_local i32 @Encode(i32*, i32*, i32) #1

declare dso_local i32 @MD5_Update(%struct.TYPE_4__*, i32*, i32) #1

declare dso_local i32 @r_mem_memzero(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
